# darwin

./: .env.docker.example  .gitignore  ARCHITECTURE.md  BRAINSTORM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LITERATURE.md  README.md  REFERENCES.md  SECURITY.md  docker-compose.yml  ecosystem.config.cjs  ecosystem.production.config.cjs  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
data/: README.md
demo/: README.md  backup_query.md  live_anchor.md  recording_checklist.md  voiceover.md
docker/: node.Dockerfile  python.Dockerfile
docs/: ARCHITECTURE.md
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
infra/: README.md
scripts/: eval_queries.json  evolution_background_loop.py  pass1_smoke.py  pass2_smoke.py  real_evolution_seed.py  recompute_nash.py  run_all.py  run_generation_evals.py  run_query_worker.py  seed_attackers.py  seed_corpus.py  seed_queries.py  seed_query_type_buckets.py  seed_synthetic.py  synthesize_remaining_gens.py  v2_mvp_smoke.py
server/: .env.example  biome.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
src/: contracts.ts
tests/: smoke.py  test_attacker_evolution.py  test_attacker_evolution_schema.py  test_attacker_fixtures.py  test_attacker_llm_mutator.py  test_attacker_qd_archive.py  test_citation_check_operator.py  test_dgm_select.py  test_eval_split.py  test_fitness_eval_v2.py  test_genome_schema_v2.py  test_islands.py  (+29 more)
(+107 files in other folders)
