[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darwin-demo"
version = "0.1.0"
description = "Darwin terminal demo and smoke-test utilities"
requires-python = ">=3.11"
dependencies = [
  "anthropic",
  "motor",
  "nashpy>=0.0.40,<1",
  "pydantic",
  "pytest",
  "rich",
  "voyageai",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
